--- a/deepfigures/dockerfiles/cpu/Dockerfile
+++ b/deepfigures/dockerfiles/cpu/Dockerfile
@@ -2,36 +2,40 @@
 
 FROM tensorflow/tensorflow:latest-py3
 
-ENV LC_ALL C.UTF-8
+ENV LC_ALL=C.UTF-8
+ENV TZ=Europe/Madrid
+
+RUN ln -snf /usr/share/zoneinfo/Europe/Madrid /etc/localtime && echo "Europe/Madrid" > /etc/timezone
+
+# Add the missing NVIDIA public key
+RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
 
 # install system packages
-
 RUN apt-get clean \
- && apt-get update --fix-missing \
- && apt-get install -y \
-    git \
-    curl \
-    gcc \
-    build-essential \
-    tcl \
-    g++ \
-    zlib1g-dev \
-    libjpeg8-dev \
-    libtiff5-dev \
-    libjasper-dev \
-    libpng12-dev \
-    tcl-dev \
-    tk-dev \
-    python3 \
-    python3-pip \
-    python3-tk \
-    ghostscript \
-    openjdk-8-jre \
-    poppler-utils \
-    texlive-latex-base \
-    texlive-fonts-recommended \
-    texlive-fonts-extra \
-    texlive-latex-extra
+    && apt-get update --fix-missing \
+    && apt-get install -y \
+        git \
+        curl \
+        gcc \
+        build-essential \
+        tcl \
+        g++ \
+        zlib1g-dev \
+        libjpeg8-dev \
+        libtiff5-dev \
+        libpng-dev \
+        tcl-dev \
+        tk-dev \
+        python3 \
+        python3-pip \
+        python3-tk \
+        ghostscript \
+        openjdk-8-jre \
+        poppler-utils \
+        texlive-latex-base \
+        texlive-fonts-recommended \
+        texlive-fonts-extra \
+        texlive-latex-extra
 
 WORKDIR /work
 
@@ -40,8 +44,12 @@ WORKDIR /work
 ADD ./requirements.txt /work
 
 RUN pip3 install --upgrade pip \
- && pip install Cython==0.25.2
-RUN pip3 install -r ./requirements.txt
+    && pip install Cython==0.25.2
+RUN pip3 install -r ./requirements.txt || true  
+# El operador || true hace que el comando siempre devuelva un estado de éxito, incluso si la instalación falla.
+
+# Install fastparquet separately
+RUN pip3 install fastparquet==0.4.0
 
 ADD ./vendor/tensorboxresnet /work/vendor/tensorboxresnet
 RUN pip3 install -e /work/vendor/tensorboxresnet
