He añadido a DataAssembler la clase Imageproperties y he modificado el modelo de FLorence 2. Además, he usa pymupdf para comprobar si existen imagenes y filtrar las página

--- a/AI/FLorence-Demo/florence2-lora/adapter_config.json
+++ b/AI/FLorence-Demo/florence2-lora/adapter_config.json
@@ -23,14 +23,14 @@
   "rank_pattern": {},
   "revision": "refs/pr/6",
   "target_modules": [
-    "o_proj",
-    "q_proj",
-    "v_proj",
-    "k_proj",
     "Conv2d",
     "linear",
+    "v_proj",
+    "q_proj",
+    "fc2",
+    "o_proj",
     "lm_head",
-    "fc2"
+    "k_proj"
   ],
   "task_type": "CAUSAL_LM",
   "use_dora": false,
