Muchos cambios en archivos y DOCKER

--- a/Image_detection/Dockerfile
+++ b/Image_detection/Dockerfile
@@ -25,6 +25,7 @@ COPY ./requirements.txt .
 
 # Instala las dependencias listadas en requirements.txt
 RUN pip install -r requirements.txt -f https://download.pytorch.org/whl/cu117/torch_stable.html
+#RUN pip install --no-cache-dir -r requirements.txt
 RUN mim install mmcv-full
 
 # Copia el resto del código de la aplicación al contenedor
@@ -34,10 +35,11 @@ RUN mv ./Image_detection/app.py .
 # Añadimos los pesos:
 RUN apt-get update && apt-get install -y wget unzip python3-pip && \
     pip3 install gdown && \
-    gdown --id 1cIWM7lTisd1GajDR98IymDssvvLAKH1n -O /app/Image_detection/weights/weights.pth && \
     gdown --id 1n9UtHgfOA6H8cxp4Y44fG7OdXbVJzMnJ -O /app/Image_detection/weights/work_dirs.zip && \
     unzip /app/Image_detection/weights/work_dirs.zip -d /app/Image_detection/weights/ && \
-    rm /app/Image_detection/weights/work_dirs.zip 
+    rm /app/Image_detection/weights/work_dirs.zip && \
+    gdown --id 1cIWM7lTisd1GajDR98IymDssvvLAKH1n -O /app/Image_detection/weights/weights.pth
+
 #Set the ENTRYPOINT to run the Python script
 ENTRYPOINT ["python3", "app.py"]
 
