--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Image_detection/ChartDete/__pycache__
 Image_detection/Line_detection/__pycache__
 PDFExraction/__pycache__
 PDFSearch/__pycache__
+.conda/
