--- a/environment.yml
+++ b/environment.yml
@@ -95,7 +95,7 @@ dependencies:
       - opencv-python==4.11.0.86
       - opendatalab==0.0.10
       - openmim==0.3.9
-      - openxlab==0.1.2
+      - openxlab
       - ordered-set==4.1.0
       - oss2==2.17.0
       - outcome==1.3.0.post0
@@ -125,7 +125,7 @@ dependencies:
       - pyyaml==6.0.2
       - ratelimit==2.2.1
       - regex==2024.11.6
-      - requests==2.32.3
+      - requests
       - rich==13.4.2
       - rsa==4.9
       - safetensors==0.5.2
