--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ nvidia-nvtx-cu12==12.4.127
 opencv-python==4.11.0.86
 opendatalab==0.0.10
 openmim==0.3.9
-openxlab==0.1.2
+openxlab
 ordered-set==4.1.0
 oss2==2.17.0
 outcome==1.3.0.post0
@@ -100,7 +100,7 @@ pytz==2023.4
 PyYAML==6.0.2
 ratelimit==2.2.1
 regex==2024.11.6
-requests==2.32.3
+requests
 rich==13.4.2
 rsa==4.9
 safetensors==0.5.2
