--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.9.4
 mdurl==0.1.2
+mmcv-full==1.7.2
 model-index==0.1.11
 mpmath==1.3.0
 networkx==3.2.1
@@ -68,6 +69,7 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 opencv-python==4.11.0.86
 opendatalab==0.0.10
+openmim==0.3.9
 openxlab
 ordered-set==4.1.0
 oss2==2.17.0
