--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 accelerate==1.3.0
-addict==2.4.0
-aliyun-python-sdk-core==2.16.0
-aliyun-python-sdk-kms==2.16.5
 annotated-types==0.7.0
 arxiv==2.1.3
 attrs==25.1.0
@@ -10,20 +7,14 @@ bibtexparser==1.4.3
 bresenham==0.2.1
 cachetools==5.5.1
 certifi==2025.1.31
-cffi==1.17.1
 charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.0
-crcmod==1.7
+contourpy==1.3.1
 crossref-commons==0.0.7
-cryptography==44.0.0
 cycler==0.12.1
 defusedxml==0.7.1
 einops==0.8.0
-exceptiongroup==1.2.2
 feedparser==6.0.11
-filelock==3.14.0
+filelock==3.17.0
 fonttools==4.55.8
 fsspec==2025.2.0
 google-ai-generativelanguage==0.6.15
@@ -39,21 +30,13 @@ h11==0.14.0
 httplib2==0.22.0
 huggingface-hub==0.28.1
 idna==3.10
-importlib_metadata==8.6.1
-importlib_resources==6.5.2
 Jinja2==3.1.5
-jmespath==0.10.0
-kiwisolver==1.4.7
-Markdown==3.7
-markdown-it-py==3.0.0
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
-matplotlib==3.9.4
-mdurl==0.1.2
-mmcv-full==1.7.2
-model-index==0.1.11
+matplotlib==3.10.0
 mpmath==1.3.0
-networkx==3.2.1
-numpy==2.0.2
+networkx==3.4.2
+numpy==2.2.2
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -68,18 +51,12 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 opencv-python==4.11.0.86
-opendatalab==0.0.10
-openmim==0.3.9
-openxlab
-ordered-set==4.1.0
-oss2==2.17.0
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
 pdf2image==1.17.0
 peft==0.14.0
 pillow==11.1.0
-platformdirs==4.3.6
 proto-plus==1.26.0
 protobuf==5.29.3
 psutil==6.1.1
@@ -87,25 +64,22 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pyChainedProxy==1.3
 pycocotools==2.0.8
-pycparser==2.22
-pycryptodome==3.21.0
 pydantic==2.10.6
 pydantic_core==2.27.2
-Pygments==2.19.1
 pyparsing==3.2.1
 PyPDF2==3.0.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
-pytz==2023.4
+pytz==2025.1
 PyYAML==6.0.2
 ratelimit==2.2.1
 regex==2024.11.6
-requests
-rich==13.4.2
+requests==2.32.3
 rsa==4.9
 safetensors==0.5.2
-scipy==1.13.1
+scipy==1.15.1
 selenium==4.28.1
+setuptools==75.8.0
 sgmllib3k==1.0.0
 six==1.17.0
 sniffio==1.3.1
@@ -113,14 +87,13 @@ sortedcontainers==2.4.0
 soupsieve==2.6
 supervision==0.25.1
 sympy==1.13.1
-tabulate==0.9.0
 terminaltables==3.1.10
 timm==1.0.14
 tokenizers==0.21.0
-tomli==2.2.1
 torch==2.6.0
+torchaudio==2.6.0
 torchvision==0.21.0
-tqdm==4.65.2
+tqdm==4.67.1
 transformers==4.48.2
 trio==0.28.0
 trio-websocket==0.11.1
@@ -129,9 +102,7 @@ typing_extensions==4.12.2
 tzdata==2025.1
 undetected-chromedriver==3.5.5
 uritemplate==4.1.1
-urllib3==1.26.20
+urllib3==2.3.0
 websocket-client==1.8.0
 websockets==14.2
 wsproto==1.2.0
-yapf==0.43.0
-zipp==3.21.0
