--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ pytz==2025.1
 PyYAML==6.0.2
 ratelimit==2.2.1
 regex==2024.11.6
-requests==2.32.3
+requests
 rsa==4.9
 safetensors==0.5.2
 scipy==1.15.1
