--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,4 @@
-Image_detection/weights/
+weights/
 data/
 model/data/
 model/result/
@@ -13,3 +13,6 @@ Image_detection/ChartDete/__pycache__
 Image_detection/Line_detection/__pycache__
 PDFExraction/__pycache__
 PDFSearch/__pycache__
+.conda/
+notebooks/
+venv/
